fix: style shift key

--- a/keyboard/scss/style.scss
+++ b/keyboard/scss/style.scss
@@ -182,6 +182,14 @@ body {
     .shift {
         width: 120px;
         background-color: var(--color-fun-key);
+        &.active-up, 
+        &.active-up {
+            background-color: rgb(131, 112, 253);
+            box-shadow: rgba(240, 46, 170, 0.4) -2px 2px, rgba(240, 46, 170, 0.3) -4px 4px, 
+            rgba(240, 46, 170, 0.2) -6px 6px, rgba(240, 46, 170, 0.1) -8px 8px, rgba(240, 46, 170, 0.05) -9px 9px;
+            transform: translateX(-3px) translateY(3px);
+            filter:brightness(130%);
+        }
     }
     .ctrl {
         width: 90px;
